added: feed list

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,13 +7,14 @@
   top: 0;
   right: 0;
   bottom: 0;
+  /* text-align: center; */
 }
 
 #app .container {
   width: 376px;
   height: 666px;
   z-index: 100;
-
+color: #213445;
   background: white;
   border-radius: 3px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
