--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,18 @@
 header {
   height: 40px;
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 20px 15px;
   text-align: center;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+overflow: hidden;
 }
 
 header svg {
   display: block;
-  width: 100%; height: 100%;
+  width: 50%;
+  padding-left:60px
 }
