--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,37 @@
-header {
-  height: 40px;
-  margin: 0 auto;
+.headerLogo {
+  height: 8%;
+  width: 70%;
   padding: 20px 0;
-  text-align: center;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  
 }
 
-header svg {
-  display: block;
-  width: 100%; height: 100%;
+.headerLogo svg {
+  margin-left: 90px;
+  margin-bottom: -25px;
+  width: 60%;
+  height: 100%;
+}
+
+.headerLogo svg:hover {
+  cursor: pointer;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header #settings {
+  margin: 20px;
+  overflow: hidden;
+  transition-duration: 0.8s;
+  transition-property: transform;
+}
+
+header #settings:hover {
+  color: #f0f4f5;
+  cursor: pointer;
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
 }
