--- a/src/css/body.css
+++ b/src/css/body.css
@@ -13,3 +13,12 @@ body {
   color: #333333;
   line-height: 1;
 }
+
+.mainContainer {
+  height: 100%;
+}
+.mainContainer h1 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
