--- a/src/css/app.css
+++ b/src/css/app.css
@@ -10,16 +10,24 @@
 }
 
 #app .container {
+  position: relative;
   width: 376px;
   height: 666px;
   z-index: 100;
 
   background: white;
   border-radius: 3px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, .9);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.9);
 }
 
 #app .container-view {
-  padding: 20px;
+  padding: 30px;
+  flex-grow: 1;
+  overflow-y: auto;
+
+  background: rgba(250, 250, 250, 50%);
 }
 
+#app .scrollable-content {
+  max-height: 65%;
+}
