--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,61 @@
-header {
-  height: 40px;
-  margin: 0 auto;
-  padding: 20px 0;
-  text-align: center;
+.header {
+  position: relative;
+  display: flex;
+  height: 50px;
+  margin: auto;
+  padding: 5px 0;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  width: 100%;
+}
+.logo {
+  display: flex;
+  padding-left: 10px;
+  align-items: center;
+  height: 100%;
+  overflow: hidden;
 }
 
-header svg {
+.label{
+  position: absolute;
+  left: 45px;
+  top: 20px;
+  font-size: 20px;
+  font-weight: 700;
+  z-index: 2;
+}
+.buttons-container {
+  display: flex;
+  gap: 10px;
+  margin-left: 50px;
+  align-items: center;
+  justify-content: center;
+}
+.topnav {
+  display: flex;
+  gap: 30px;
+  margin-left: 70px;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #333; */
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
   display: block;
-  width: 100%; height: 100%;
+  color: #333;
+  text-align: center;
+  padding: 8px 8px;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  border-bottom: 3px solid transparent;
+}
+
+.topnav a:hover {
+  border-bottom: 3px solid #FC5624;
+}
+
+.topnav a.active {
+  border-bottom: 3px solid #FC5624;
 }
