--- a/src/css/app.css
+++ b/src/css/app.css
@@ -22,3 +22,12 @@
 #app .container-view {
   padding: 20px;
 }
+
+@media (max-width: 480px) {
+  #app .container {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: none;
+  }
+}
